# supercompute

./: .gitignore  README.md
.claude/: claude.mcp.json  settings.json
.claude/agents/: corki-coverage-guardian.md  devin-software-engineer.md  v0-ui-generator.md  veigar-security-reviewer.md
.claude/autonomous/: context.json  generated_tools.json
.claude/hooks/: CLAUDE_CODE_HOOKS_SETUP.md  CONTEXT_V7_HOOKS_SUMMARY.md  README_BUSINESS_AUTOMATION.md  README_QUANTUM_HOOKS.md  SCHEMANTICS_V3_INTEGRATION_GUIDE.md  UNIFIED_HOOKS_README.md  autonomous_business_orchestrator.py  bash_command_enhancer.sh  bash_command_learner.sh  business_opportunity_detector_julia.sh  business_subagent_template.py  code_generation_enhancer.sh  context_activation_hook.sh  context_changed_hook.sh  context_v7_active.json  demo_aio_system.sh  error_occurred_hook.sh  intelligent_reader.sh  migrate_to_v7.sh  migrate_to_v7_final.sh  quantum_command_hook.sh  quantum_command_transformer.jl  schema_uplift_hook.sh  schemantics_uplift.sh  schemantics_uplift_v3.sh  session_analytics_julia.sh  session_consolidator.sh  subagent-stop-hook  subagent_consolidator.sh  subagent_consolidator_julia.sh  subagent_workflow_manager.py  test_aio_quick.sh  test_aio_routing.sh  test_model_selection.sh  test_quantum_commands.sh  test_schemantics_v3.sh  test_schemantics_v3_final.sh  test_v7_hooks.sh  tool_use_post_hook.sh  tool_use_pre_hook.sh  (+4 more)
.claude/hooks/backup_20250825_142322/: autonomous_system.py  marketing_subagents.py  sales_customer_success_subagents.py  schema_stacked_integration.py  workflow_orchestration_engine.py
.claude/output-styles/: impact-engineering.md
.github/: README.md
110_REASSEMBLY/: grok_comparison_report.json  requirements.txt
110_REASSEMBLY/demos/: grok_comparison.py  sydney_to_pretoria.py
110_REASSEMBLY/docs/: AUTHORS.md  from_apartheid_to_ai.md  neurodivergent-excellence.md
110_REASSEMBLY/rust-engine/: github_campaign_readme.md  instagram_script.txt  linkedin_post.md  social_media_thread.txt
reassembly/: README.md
reassembly/benchmarks/: anu_benchmark_suite.py
reassembly/integration/: consciousness_bridge.py
reassembly/rust-engine/: Cargo.toml
reassembly/rust-engine/src/: attention.rs  lib.rs  memory.rs  scheduler.rs  verification_simple.rs
(+243 files in other folders)
