[package]
name = "reassembly-engine"
version = "0.1.0"
authors = ["Oveshen Govender <oveshen@supercompute.me>"]
edition = "2021"
description = "High-performance Rust engine for REASSEMBLY Web3-native supercompute"
license = "MIT/Apache-2.0"

[dependencies]
# Core
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# WebAssembly
wasmer = "4.3"
wasmer-compiler-cranelift = "4.3"
# wasmtime = "24.0"  # Temporarily disabled due to version conflict
wasm-bindgen = "0.2"

# GPU Computing
cuda-sys = { version = "0.2", optional = true }
hip-sys = { version = "0.1", optional = true }  
vulkano = { version = "0.34", optional = true }
metal = { version = "0.29", optional = true }
opencl3 = { version = "0.10", optional = true }

# Web3/Blockchain
web3 = "0.19"
ethers = { version = "2.0", features = ["ws", "rustls"] }
solana-client = "2.0"
cosmos-sdk-proto = "0.24"

# Cryptography
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "1.0"  # Use stable version
# bulletproofs = "5.0"  # Temporarily disabled - complex dependencies
# ark-std = "0.4"
# ark-ff = "0.4"
# ark-groth16 = "0.4"
# ark-bls12-381 = "0.4"
# ark-snark = "0.4"

# Memory Management
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.0"
bytes = "1.7"
memmap2 = "0.9"

# Networking
tonic = "0.12"
prost = "0.13"
quinn = "0.11"
libp2p = { version = "0.54", features = ["tokio", "noise", "yamux", "kad"] }
reqwest = { version = "0.11", features = ["json"] }

# Scientific Computing
ndarray = "0.15"
rayon = "1.7"

# Utilities
uuid = { version = "1.4", features = ["v4"] }

# Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
prometheus = "0.13"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[features]
default = ["cuda", "web3-all"]
cuda = ["cuda-sys"]
rocm = ["hip-sys"]
metal = ["dep:metal"]
vulkan = ["vulkano"]
opencl = ["opencl3"]
web3-all = []
quantum = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"